--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
       <!-- TODO: add grid from script here!-->
     </div>
 
+    <br />
+    <div id="buttons">
+      <button id="start">Start game</button>
+      <button id="smaller">Smaller</button>
+      <button id="larger">Larger</button>
+      <button id="slower">Slower</button>
+      <button id="faster">Faster</button>
+    </div>
+
     <script type="module" src="./scripts/controller.js"></script>
   </body>
 </html>
