--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <br />
     <div id="buttons">
       <button id="start">Start game</button>
-      <button id="smaller">Smaller</button>
-      <button id="larger">Larger</button>
+      <!-- <button id="smaller">Smaller</button>
+      <button id="larger">Larger</button> -->
       <button id="slower">Slower</button>
       <button id="faster">Faster</button>
     </div>
