--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       <button id="larger">Larger</button> -->
       <button id="slower">Slower</button>
       <button id="faster">Faster</button>
+      <button id="reset">Reset</button>
     </div>
 
     <script type="module" src="./scripts/controller.js"></script>
